--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Lucida Grande', 'sans-serif';
     color: #ffffff;
+    background-color: #000000;
 }
 img {
     display: block;
